# cajuina_api

./: .env  .env.example  .gitignore  DEPLOY.md  Dockerfile  arquitetura.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  test_serializer.py
.github/workflows/: ci.yml  deploy.yml
apps/alterar_senha/: apps.py
apps/atividades/: __init__.py  apps.py  middleware.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/atividades/migrations/: 0001_initial.py
apps/corretores/: admin.py  apps.py  models.py  selectors.py  services.py
apps/corretores/migrations/: 0001_initial.py  0002_alter_corretor_recebimento.py
apps/corretores/tests/: test_api.py
apps/modalidades/: apps.py  models.py  selectors.py  services.py
apps/modalidades/migrations/: 0001_initial.py
apps/produtores/: admin.py  apps.py  models.py  selectors.py  services.py
apps/produtores/migrations/: 0001_initial.py  0002_alter_produtor_corretora.py
apps/produtores/tests/: test_api.py
apps/seguradoras/: admin.py  apps.py  models.py  selectors.py  services.py
apps/seguradoras/migrations/: 0001_initial.py
apps/seguradoras/tests/: test_api.py
apps/segurados/: admin.py  apps.py  models.py  selectors.py  services.py
apps/segurados/migrations/: 0001_initial.py
apps/tomador/: apps.py  models.py  views.py
apps/tomadores/: admin.py  apps.py  models.py  selectors.py  services.py
apps/users/: models.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py
test/: test_api.py  test_get.py  test_next.py
(+40 files in other folders)
