[project]
name = "cajuina-api"
version = "0.1.0"
description = "API para Cajuína Seguros"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2,<5.0",
    "djangorestframework",
    "djangorestframework-simplejwt",
    "psycopg2-binary",
    "django-cors-headers",
    "requests",
    "gunicorn",
]

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-django",
    "ruff",
]

[tool.ruff.lint.per-file-ignores]
# Settings do Django usam idiomas que o ruff sinaliza por padrão:
# `from .base import *` (F403/F405) e imports após blocos de config (E402).
"config/settings/*.py" = ["F403", "F405", "E402"]
